feat: use config to connect the bot