@@ -6,6 +6,7 @@ import net.dv8tion.jda.api.JDABuilder;
 import net.dv8tion.jda.api.requests.GatewayIntent;
 
 import java.util.Arrays;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor(staticName = "connect")
 public class DiscordBotConnector {
@@ -15,10 +16,10 @@ public class DiscordBotConnector {
     public void with(BotProperties properties) {
         bot.onEnable();
 
-        JDABuilder.createLight(properties.getToken())
+        JDABuilder.createLight(bot.getConfig().getToken())
                 .addEventListeners(new BotConnectionListener(bot))
                 .disableCache(properties.getDisabledCaches())
-                .setDisabledIntents(Arrays.stream(GatewayIntent.values()).toList())
+                .setDisabledIntents(Arrays.stream(GatewayIntent.values()).collect(Collectors.toList()))
                 .setEnabledIntents(properties.getEnabledIntents())
                 .build();
     }
